# lazyfields

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pytest.yaml
