[project]
name = "znfields"
version = "0.1.2"
description = "Lazy evaluation of dataclass fields"
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[project.urls]
Repository = "https://github.com/zincware/znfields"
Releases = "https://github.com/zincware/znfields/releases"
Discord = "https://discord.gg/7ncfwhsnm4"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
]
